--- a/SinExWebApp20256461/Views/Shipments/_ShipmentsSearchPartial.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/_ShipmentsSearchPartial.cshtml
@@ -2,8 +2,8 @@
 
 @using (Html.BeginForm("GenerateHistoryReport", "Shipments", FormMethod.Get))
 {
-    @Html.LabelFor(a => a.ShippingAccountId, "Shipping Account")
-    @Html.DropDownListFor(a => a.ShippingAccountId, Model.ShippingAccounts, "please Select")
+    @Html.LabelFor(a => a.ShippingAccountNumber, "Shipping Account")
+    @Html.DropDownListFor(a => a.ShippingAccountNumber, Model.ShippingAccounts, "please Select")
     @Html.TextBoxFor(a => a.ShippedStartDate, htmlAttributes: new { @value = ViewBag.CurrentShippingStartDate})
     @Html.TextBoxFor(a => a.ShippedEndDate, htmlAttributes: new { @value = ViewBag.CurrentShippingEndDate })
     <input type="submit" value="Search" />
