--- a/SinExWebApp20256461/Views/Shared/_Layout.cshtml
+++ b/SinExWebApp20256461/Views/Shared/_Layout.cshtml
@@ -45,6 +45,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Reports<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li>@Html.ActionLink("Shipping History", "GenerateHistoryReport", "Shipments")</li>
+                                <li>@Html.ActionLink("Invoice History", "GenerateInvoiceReport", "Shipments")</li>
                             </ul>
                         </li>
                     }
