--- a/SinExWebApp20256461/Views/Shipments/Delete.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Delete.cshtml
@@ -4,12 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
+<hr />
 <div>
-    <h4>Shipment</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.ReferenceNumber)
@@ -28,27 +25,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ShippedDate)
+            @Html.DisplayNameFor(model => model.Recipient.FullName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ShippedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeliveredDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeliveredDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RecipientName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RecipientName)
+            @Html.DisplayFor(model => model.Recipient.FullName)
         </dd>
 
         <dt>
@@ -82,15 +63,6 @@
         <dd>
             @Html.DisplayFor(model => model.Status)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ShippingAccountId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ShippingAccountId)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
