--- a/SinExWebApp20256461/Views/Shipments/Index.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Index.cshtml
@@ -19,13 +19,7 @@
             @Html.DisplayNameFor(model => model.ServiceType)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ShippedDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeliveredDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RecipientName)
+            @Html.DisplayNameFor(model => model.Recipient.FullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NumberOfPackages)
@@ -39,46 +33,41 @@
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ShippingAccountId)
-        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReferenceNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ServiceType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShippedDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeliveredDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumberOfPackages)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Origin)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Destination)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ShippingAccountId)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.WaybillId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.WaybillId })
-        </td>
-    </tr>
+@foreach (var item in Model)
+{
+    if (item.Status != "deleted")
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReferenceNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ServiceType)
+            </td>
+            <th>
+                @Html.DisplayFor(modelItem => item.Recipient.FullName)
+            </th>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumberOfPackages)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Origin)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Destination)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.WaybillId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.WaybillId })
+            </td>
+        </tr>
+    }
 }
 
 </table>
