--- a/SinExWebApp20256461/Views/Destinations/Index.cshtml
+++ b/SinExWebApp20256461/Views/Destinations/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (User.IsInRole("Employee"))
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
 <table class="table">
     <tr>
         <th>
@@ -17,7 +19,6 @@
         <th>
             @Html.DisplayNameFor(model => model.ProvinceCode)
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -29,9 +30,7 @@
             @Html.DisplayFor(modelItem => item.ProvinceCode)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DestinationID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DestinationID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DestinationID })
+            @Html.ActionLink("Details", "Details", new { id = item.DestinationID })
         </td>
     </tr>
 }
