--- a/SinExWebApp20256461/Views/PersonalShippingAccounts/Edit.cshtml
+++ b/SinExWebApp20256461/Views/PersonalShippingAccounts/Edit.cshtml
@@ -16,6 +16,8 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ShippingAccountId)
+        @Html.HiddenFor(model => model.ShippingAccountNumber)
+        @Html.HiddenFor(model => model.UserName)
 
         <div class="form-group">
             @Html.LabelFor(model => model.BuildingInformation, htmlAttributes: new { @class = "control-label col-md-2" })
