--- a/SinExWebApp20256461/Views/Shared/_Layout.cshtml
+++ b/SinExWebApp20256461/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                             @if (User.IsInRole("Employee"))
                             {
                                 <li>@Html.ActionLink("Input Tracking", "Create", "Trackings")</li>
+                                <li>@Html.ActionLink("Change Penalty Fee", "Edit", "PenaltyFees", new { id = 1 }, null)</li>
                             }
                         </ul>
                     </li>
