pass waybillId to pickup

--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -8,8 +8,8 @@
 @using (Html.BeginForm("Create", "Pickups"))
 {
     <div class="btn-group" style="margin:5px 0 10px 0;">
-        @Html.ActionLink("Immediate", "Create", new { pickupType = "Immediate", location = ViewBag.Location }, new { @class = "btn btn-primary btn-large" })
-        @Html.ActionLink("Prearranged", "Create", new { pickupType = "Prearranged", location = ViewBag.Location }, new { @class = "btn btn-info btn-large" })
+        @Html.ActionLink("Immediate", "Create", new {waybillId= ViewBag.WaybillId, pickupType = "Immediate", location = ViewBag.Location }, new { @class = "btn btn-primary btn-large" })
+        @Html.ActionLink("Prearranged", "Create", new { waybillId = ViewBag.WaybillId, pickupType = "Prearranged", location = ViewBag.Location }, new { @class = "btn btn-info btn-large" })
     </div>
 
     if (Model.Pickup.Type == "Immediate")
@@ -33,8 +33,8 @@
 
 <h2>The pickup Location  :</h2>
     <div class="btn-group" style="margin:5px 0 10px 0;">
-        @Html.ActionLink("Same", "Create", new { pickupType = Model.Pickup.Type, location = "Same" }, new { @class = "btn btn-success btn-large" })
-        @Html.ActionLink("Diff", "Create", new { pickupType = Model.Pickup.Type, location = "Diff" }, new { @class = "btn btn-warning btn-large" })
+        @Html.ActionLink("Same", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Same" }, new { @class = "btn btn-success btn-large" })
+        @Html.ActionLink("Diff", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Diff" }, new { @class = "btn btn-warning btn-large" })
     </div>
 
     <div>
